<resources>
    <string name="app_name" translatable="false">STK</string>

    <string name="balance_check_ussd_code" translatable="false">*222#</string>
    <string name="data_check_ussd_code" translatable="false">*222*328#</string>
    <string name="messages_check_ussd_code" translatable="false">*222*767#</string>
    <string name="minutes_check_ussd_code" translatable="false">*222*869#</string>
    <string name="bonuses_check_ussd_code" translatable="false">*222*266#</string>
    <string name="recharge_check_ussd_code" translatable="false">*222*732#</string>

    <string name="shortcut_selector_header">Pick shortcut</string>
    <string name="balance_check_label">Consult available balance</string>
    <string name="data_check_label">Consult available data</string>
    <string name="messages_check_label">Consult available messages</string>
    <string name="minutes_check_label">Consult available minutes</string>
    <string name="bonuses_check_label">Consult available bonuses</string>
    <string name="recharge_check_label">Consult date to recharge</string>

    <string name="balance_label">Balance</string>
    <string name="data_label">Data</string>
    <string name="messages_label">Messages</string>
    <string name="minutes_label">Minutes</string>
    <string name="bonuses_label">Bonuses</string>
    <string name="recharge_label">Recharge</string>

    <string name="permission_requester_dialog_title">Permission required</string>
    <string name="permission_requester_dialog_body">In order to continue with the execution of the selected operation, the application needs for you to grant the required permission for it. The pending operation will be performed once you grant the permission to the application</string>

    <string name="ussd_accessibility_service_description">A service to fetch and store data about the
        available balance; besides of the status of bonuses and available packets.

        \n\nThis service is in charge of scanning the content of the dialog that appears on the screen
        after making a consult, in search of information related with the amount of balance available,
        the remaining call minutes, the amount of SMS still left, existing bonuses and, basically, to
        summarize, all the information consulted through the application when performing an operation.
        All the obtained data is stored exclusively on this device and is only used to be shown in the
        main screen of the application.

        \n\nPlease notice that when you enable this service, the system might warn you about that STK has
        access and control over the content on the screen. This happens because in order to get access
        to the required data, the content of the screen needs to be scanned; but STK only inspects
        the dialogs generated as response for the consults associated with ETECSA\'s services in
        search of the aforementioned information, ignoring any other content and without intervening
        with user actions.
    </string>

    <string name="recovery_mode_dialog_title">Recovery mode</string>
    <string name="recovery_mode_dialog_message">An unexpected error occurred and the application had to restart. You may copy the error message to obtain advanced details about the error or simply discard this message. We\'re sorry for all the inconveniences and, after closing this dialog, you may continue using the app as usual</string>
    <string name="error_message_clipboard_tag">Error message from STK</string>

    <string name="home_fragment_menu_title">Home</string>
    <string name="shop_fragment_menu_title">Purchases</string>
    <string name="shop_fragment_title">Packets and plans</string>
    <string name="more_options_fragment_menu_title">More options</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="change_sim_pin_title">Change SIM card PIN</string>
    <string name="crash_logs_fragment_title">Crash logs</string>

    <string name="invalid_phone_number_tip">The associated number is invalid</string>
    <string name="unusable_phone_number_tip">The selected number can\'t be used</string>
    <string name="transfer_receiver_phone_number_length_error">The receiver\'s number must have 8 digits</string>
    <string name="transfer_receiver_phone_number_starting_error">The receiver\'s number must start with 5 or 6</string>
    <string name="transfer_key_length_error">The PIN must have four digits</string>
    <string name="transfer_balance_empty_error">Input the amount</string>
    <string name="transfer_balance_is_zero_error">The amount to transfer can\'t be 0</string>
    <string name="old_transfer_key_length_error">The old PIN must have four digits</string>
    <string name="new_transfer_key_length_error">The new PIN must have four digits</string>
    <string name="pin_replacement_is_old_pin_error">The new PIN must be different</string>

    <string name="transfer_cents_dialog_title">Balance with cents</string>
    <string name="transfer_cents_dialog_message">Due to restrictions that don\'t make possible transferring balance with cents directly from third-party apps, the specified amount will be ignored and you should input it when ETECSA requests you the amount to transfer</string>

    <string name="calls_section_header">Calls</string>
    <string name="private_number_label">Private number</string>
    <string name="reverted_call_label">Reverted call</string>

    <string name="consults_section_header">Consults</string>

    <string name="balance_top_up_section_header">Mobile top-up</string>
    <string name="voucher_code_hint_label">Voucher code</string>
    <string name="invalid_code_tip">Invalid code</string>
    <string name="malformed_code_tip">Malformed code</string>
    <string name="recharge_code_length_error">The code must have 16 digits</string>
    <string name="qr_scan_tip_message">Place the QR code on the voucher in the central square</string>
    <string name="balance_top_up_button_label">Top-up</string>

    <string name="balance_transfer_section_header">Balance transfer</string>
    <string name="balance_transfer_receiver_number_field_hint_label">Receiver number</string>
    <string name="balance_transfer_key_field_hint_label">PIN</string>
    <string name="balance_transfer_amount_field_hint_label">Amount</string>
    <string name="balance_transfer_update_key_button_label">Change PIN</string>
    <string name="balance_transfer_button_label">Transfer</string>

    <string name="transfer_key_change_dialog_title">PIN change</string>
    <string name="current_pin_hint">Current PIN</string>
    <string name="transfer_key_change_dialog_new_key_hint">New PIN</string>

    <string name="use_pin_label">Use PIN</string>
    <string name="use_puk_label">Use PUK</string>
    <string name="puk_code_hint">PUK code</string>
    <string name="repeat_new_pin_hint">Repeat new PIN</string>
    <string name="puk_length_error">PUK code must be eight digits long</string>
    <string name="short_pin_error">PIN code must be, at least, four digits long</string>
    <string name="short_new_pin_error">New PIN must be at least four digits long</string>
    <string name="pin_repetition_mismatch">The codes don\'t match</string>

    <string name="balance_loan_section_header">Ask for a balance loan</string>
    <string name="balance_loan_25">Ask for $25</string>
    <string name="balance_loan_50">Ask for $50</string>
    <string name="balance_loan_check_button_label">Check debt</string>

    <string name="data_packets_header_label">Internet packets</string>
    <string name="message_packets_header_label">SMS Plans</string>
    <string name="voice_packets_header_label">Voice Plans</string>
    <string name="no_minutes_available_tag">NO MIN</string>
    <string name="no_sms_available_tag">NO SMS</string>

    <string name="appearance_settings_section_header">Appearance</string>
    <string name="theme_toggle_card_title">Enable dark mode</string>
    <string name="theme_toggle_card_description">Use a palette with dark colors in the application</string>
    <string name="updating_theme_message">Updating the theme…</string>
    <string name="language_picker_card_title">Application language</string>
    <string name="language_picker_card_description">Select the language used by the application when showing its content</string>
    <string name="languages_dialog_title">Languages</string>
    <string name="default_language_tag">Default language</string>
    <string name="date_format_title">Date format</string>
    <string name="date_format_description">Select the date format to use for the items on the list of crashlogs</string>

    <string name="general_settings_section_header">General settings</string>
    <string name="accessibility_service_switch_header">Accessibility service</string>
    <string name="accessibility_service_switch_description">Enable the accessibility service used to capture the data showed in the main screen</string>
    <string name="reverted_call_prefix_selector_header">Prefix for reverted calls</string>
    <string name="reverted_call_prefix_selector_description">Choose the prefix for reverted calls (in case the default option doesn\'t work)</string>

    <string name="useful_information_section_header">Useful information</string>
    <string name="balance_recharge_faq_header">Mobile balance</string>
    <string name="balance_recharge_faq_description">This is a link to the official site with the FAQs about mobile balance</string>
    <string name="mobile_plans_faq_header">Plans</string>
    <string name="mobile_plans_faq_description">This is a link to the official site with the FAQs about mobile plans</string>

    <string name="source_code_label">Source code</string>
    <string name="telegram_channel_label">Telegram channel</string>

    <string name="opening_link_error_tip">The link can\'t be opened</string>
    <string name="dialing_error_tip">The call can\'t be performed</string>

    <string name="crash_log_option_read_full_record_label">Read full log</string>
    <string name="crash_log_option_copy_record_label">Copy crash log</string>
    <string name="crash_log_option_remove_record_label">Remove crash log</string>
</resources>