<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/appearance_settings_section_header"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?colorSurface"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:contentPadding="0dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/theme_toggle_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="0dp"
                            app:contentPadding="10dp"
                            app:strokeWidth="0dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.materialswitch.MaterialSwitch
                                    android:id="@+id/theme_toggle_switch"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:clickable="false"
                                    android:focusable="false" />

                                <TextView
                                    android:id="@+id/theme_toggle_card_header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_toStartOf="@id/theme_toggle_switch"
                                    android:singleLine="true"
                                    android:text="@string/theme_toggle_card_title"
                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                                <TextView
                                    android:id="@+id/theme_toggle_card_description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/theme_toggle_card_header"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginTop="4dp"
                                    android:layout_toStartOf="@id/theme_toggle_switch"
                                    android:text="@string/theme_toggle_card_description"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    android:textColor="?android:attr/textColorSecondary" />
                            </RelativeLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/language_picker_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="0dp"
                            app:contentPadding="10dp"
                            app:strokeWidth="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@string/language_picker_card_title"
                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/language_picker_card_description"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    android:textColor="?android:attr/textColorSecondary" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/date_format_picker_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="0dp"
                            app:contentPadding="10dp"
                            app:strokeWidth="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:singleLine="true"
                                    android:text="@string/date_format_title"
                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="4dp"
                                    android:text="@string/date_format_description"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    android:textColor="?android:attr/textColorSecondary" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/general_settings_section_header"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?colorSurface"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:contentPadding="0dp"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/accessibility_service_switch_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="0dp"
                            app:contentPadding="10dp"
                            app:strokeWidth="0dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <com.google.android.material.materialswitch.MaterialSwitch
                                    android:id="@+id/accessibility_service_switch"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:layout_marginStart="5dp"
                                    android:clickable="false"
                                    android:focusable="false" />

                                <TextView
                                    android:id="@+id/accessibility_service_toggle_card_header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_toStartOf="@id/accessibility_service_switch"
                                    android:singleLine="true"
                                    android:text="@string/accessibility_service_switch_header"
                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                                <TextView
                                    android:id="@+id/accessibility_service_toggle_card_description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/accessibility_service_toggle_card_header"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginTop="4dp"
                                    android:layout_toStartOf="@id/accessibility_service_switch"
                                    android:text="@string/accessibility_service_switch_description"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    android:textColor="?android:attr/textColorSecondary" />
                            </RelativeLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.card.MaterialCardView
                            android:id="@+id/reverted_call_prefix_selector_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="0dp"
                            app:contentPadding="10dp"
                            app:strokeWidth="0dp">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <Spinner
                                    android:id="@+id/reverted_call_prefix_selector_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:background="@null"
                                    android:dropDownWidth="wrap_content"
                                    android:padding="0dp" />

                                <TextView
                                    android:id="@+id/reverted_call_prefix_selector_card_header"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_toStartOf="@id/reverted_call_prefix_selector_spinner"
                                    android:singleLine="true"
                                    android:text="@string/reverted_call_prefix_selector_header"
                                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                                <TextView
                                    android:id="@+id/reverted_call_prefix_selector_card_description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/reverted_call_prefix_selector_card_header"
                                    android:layout_alignParentStart="true"
                                    android:layout_marginTop="4dp"
                                    android:layout_toStartOf="@id/reverted_call_prefix_selector_spinner"
                                    android:text="@string/reverted_call_prefix_selector_description"
                                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                                    android:textColor="?android:attr/textColorSecondary" />
                            </RelativeLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>